Chapter name change (intro)
- change of numbering for first intro chapter

--- a/METRICS/7772_LectureNotes.tex
+++ b/METRICS/7772_LectureNotes.tex
@@ -45,7 +45,7 @@
 
 \tableofcontents
 
-\chapter{Regression, Correlation and Causes}
+\chapter*{Regression, Correlation and Causes}
 
 \chapter{Finite Sample Properties of Estimators}
 
