Update Chapters 1 and 2 of ECON7772
Merged Chapters 1 and 2 to Estimators and properties. Added proofs. Clarified some sections.

--- a/metrics/7772_INTRO/7772_LectureNotes.tex
+++ b/metrics/7772_INTRO/7772_LectureNotes.tex
@@ -45,15 +45,9 @@
 
 \tableofcontents
 
-\chapter*{Regression, Correlation and Causes}
-
-\chapter{Finite Sample Properties of Estimators}
+\chapter{Properties of Estimators}
 
 \input{Chapters/c01_estimatorproperties}
-
-\chapter{Asymptotic Properties of Estimators} 
-
-\input{Chapters/c02_asympestimatorproperties}
 
 \chapter{Classical Regression}
 
