--- a/metrics/7772_INTRO/7772_LectureNotes.tex
+++ b/metrics/7772_INTRO/7772_LectureNotes.tex
@@ -61,7 +61,7 @@
 
 \input{Chapters/c05_mlestimation}
 
-\chapter{Inference and Hypothesis tests}
+\chapter{Inference and Hypothesis Testing}
 
 \input{Chapters/c06_inferencehyptests}
 
