Update EC7772 - Ch10 NP
Replaced second half with more detailed chapter from EC8822

--- a/metrics/7772_INTRO/7772_LectureNotes.tex
+++ b/metrics/7772_INTRO/7772_LectureNotes.tex
@@ -4,7 +4,7 @@
 \usepackage{microtype}
 \usepackage{libertine} %Palatino
 \usepackage[expert]{mathdesign}
-\usepackage{amsmath,amsfonts,amsthm}
+\usepackage{amsmath,amsfonts,amsthm, amssymb}
 \usepackage{enumitem}
 \usepackage[open,openlevel=1]{bookmark}
 \usepackage{todonotes}
@@ -27,6 +27,7 @@
 \newcommand{\V}[1]{\operatorname{Var}\left[#1\right]}
 \newcommand{\cov}[1]{\operatorname{Cov}\left(#1\right)}
 \newcommand{\Prob}[1]{\operatorname{Pr}\left[#1\right]}
+\newcommand{\Probhat}[1]{\hat{\operatorname{Pr}}\left[#1\right]}
 \newcommand{\plim}{\operatorname{plim}}
 \newcommand{\pconv}{\overset{\text{p}}{\to}}
 \newcommand{\dconv}{\overset{\text{d}}{\to}}
