IO1: Ch4 and Ch5: improved and mostly completed

--- a/io/io1/8853_LectureNotes.tex
+++ b/io/io1/8853_LectureNotes.tex
@@ -59,11 +59,13 @@ fancyline, #1]{\begin{spacing}{.5}#2\end{spacing}}}
 \input{chapters/blp}
 
 \chapter{Product Availability}
-
-
+\input{chapters/demandavail}
 
 \chapter{Entry Models}
 \input{chapters/entry}
+
+\chapter{Moment Inequalities}
+\input{chapters/momineq}
 
 
 \end{document}
