IO2: added price disc + completed NLP

--- a/io/io2/8854_LectureNotes.tex
+++ b/io/io2/8854_LectureNotes.tex
@@ -51,6 +51,9 @@ fancyline, #1]{\begin{spacing}{.5}#2\end{spacing}}}
 \chapter{Nonlinear Pricing}
 \input{chapters/nlp}
 
+\chapter{Price Discrimination}
+\input{chapters/pricedisc}
+
 \chapter{Search}
 \input{chapters/search}
 
