IO1: added Aguirregabiria (99) + started Hendel Nevo

--- a/io/io1/8853_LectureNotes.tex
+++ b/io/io1/8853_LectureNotes.tex
@@ -67,5 +67,8 @@ fancyline, #1]{\begin{spacing}{.5}#2\end{spacing}}}
 \chapter{Moment Inequalities}
 \input{chapters/momineq}
 
+\chapter{Retailing and Inventories}
+\input{chapters/retail}
+
 
 \end{document}
