IO1: added Dynamic chapter (def + Rust)

--- a/io/io1/8853_LectureNotes.tex
+++ b/io/io1/8853_LectureNotes.tex
@@ -67,6 +67,9 @@ fancyline, #1]{\begin{spacing}{.5}#2\end{spacing}}}
 \chapter{Moment Inequalities}
 \input{chapters/momineq}
 
+\chapter{Single-agent Discrete Dynamic Programming}
+\input{chapters/dynamic}
+
 \chapter{Retailing and Inventories}
 \input{chapters/retail}
 
