IO2: finished Grubb's part

--- a/io/io2/8854_LectureNotes.tex
+++ b/io/io2/8854_LectureNotes.tex
@@ -57,12 +57,13 @@ fancyline, #1]{\begin{spacing}{.5}#2\end{spacing}}}
 \chapter{Search}
 \input{chapters/search}
 
-
 \chapter{Switching Costs}
 \input{chapters/switchcosts}
 
 \chapter{Learning}
 \input{chapters/learning}
 
+\chapter{Insurance}
+\input{chapters/insurance}
 
 \end{document}
