IO1: added all chapters + a few notes on Antitrust

--- a/io/io1/8853_LectureNotes.tex
+++ b/io/io1/8853_LectureNotes.tex
@@ -54,7 +54,6 @@ fancyline, #1]{\begin{spacing}{.5}#2\end{spacing}}}
 \chapter{Logit, Nested Logit and Multinomial Probit}
 \input{chapters/logits}
 
-
 \chapter{Mixed Logit (BLP)}
 \input{chapters/blp}
 
@@ -72,6 +71,18 @@ fancyline, #1]{\begin{spacing}{.5}#2\end{spacing}}}
 
 \chapter{Retailing and Inventories}
 \input{chapters/retail}
+
+\chapter{Conduct and Antitrust}
+\input{chapters/conduct}
+
+\chapter{Auctions}
+\input{chapters/auctions}
+
+\chapter{Vertical Contracts}
+\input{chapters/vertical}
+
+\chapter{Additional papers}
+\input{chapters/papers}
 
 
 \end{document}
