IO2: added Murry's part + almost completed Production

--- a/io/io2/8854_LectureNotes.tex
+++ b/io/io2/8854_LectureNotes.tex
@@ -47,6 +47,17 @@ fancyline, #1]{\begin{spacing}{.5}#2\end{spacing}}}
 
 \tableofcontents
 
+\chapter{Production Function Estimation}
+\input{chapters/production}
+
+\chapter{Endogenous Products}
+\input{chapters/endogprod}
+
+\chapter{Common Ownership}
+\input{chapters/commonown}
+
+\chapter{Dynamics}
+\input{chapters/dynamics}
 
 \chapter{Nonlinear Pricing}
 \input{chapters/nlp}
